--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nucleus Studio</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Nucleus Studio</h1>
+    <h2>About Us</h2>
+    We are a fresh studio developing narrative driven games.
+    <h2>Projects</h2>
+    <h3>Nucleus Game System</h3>
+    <h3>KARNE</h3>
 </body>
 </html>
