--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nucleus Studio</title>
+    <style>
+        *{
+            font-family: "Roboto", sans-serif;
+        }
+        h1,h2,h3,h4,h5 {
+            font-family: "Noto Sans Mono", monospace;
+        }
+    </style>
 </head>
 <body>
     <h1>Nucleus Studio</h1>
@@ -12,5 +24,7 @@
     <h2>Projects</h2>
     <h3>Nucleus Game System</h3>
     <h3>KARNE</h3>
+    <h3>KRUOR</h3>
+    <h3>KALCI</h3>
 </body>
 </html>
